Tue Apr 10 02:24:40 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* io.c (opt_i_set): should strdup() inplace_edit string.

Mon Apr  9 23:29:54 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (exec_under): need to push cref too.

Mon Apr  9 12:05:44 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (Init_File): should redifine "new" class method.

Mon Apr  9 11:56:52 2001  Shugo Maeda <shugo@ruby-lang.org>

	* lib/net/imap.rb: fix typo.

Thu Apr  5 22:40:12 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_const_get): no recursion to show full class path
	  for modules.

	* eval.c (rb_set_safe_level): should set safe level in curr_thread
	  as well.

	* eval.c (safe_setter): ditto.

Thu Apr  5 13:46:06 2001  K.Kosako  <kosako@sofnec.co.jp>

	* object.c (rb_obj_is_instance_of): nil belongs to false, not true.

Thu Apr  5 02:19:03 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (make_time_t): proper (I hope) daylight saving time
	  handling for both US and Europe.  I HATE SUMMER TIME!

	* eval.c (rb_thread_wait_for): non blocked signal interrupt should
	  stop the interval.

Wed Apr  4 03:47:03 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_mod_clone): should copy method bodies too.

	* bignum.c (bigdivrem): should trim trailing zero bdigits of
	  remainder, even if dd == 0.

Tue Apr  3 15:29:10 2001  Akinori MUSHA  <knu@iDaemons.org>

	* Makefile.in: Introduce MAINLIBS.

	* configure.in: Link libc_r against the ruby executable on
	FreeBSD, which is the first attempt to work around a certain
	problem regarding pthread on FreeBSD.  It should make ruby/libruby
	happy when it loads an extention to a library compiled and linked
	with -pthread.  Note, however, that libruby is _not_ linked with
	libc_r so as not to mess up pthread unfriendly stuff including
	apache+mod_ruby and vim6+ruby_interp.

Tue Apr  3 09:56:20 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
