@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.4"
-#define RUBY_RELEASE_DATE "2001-04-10"
+#define RUBY_RELEASE_DATE "2001-04-11"
 #define RUBY_VERSION_CODE 164
-#define RUBY_RELEASE_CODE 20010410
+#define RUBY_RELEASE_CODE 20010411
